Fix horizontal code scrolling on mobile

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -14,6 +14,9 @@ code {
   color: #194774;
   background-color: #6b6b6b0a;
 }
+pre code {
+  white-space: pre;
+}
 html,
 body {
   height: 100%;
